--- a/package.json
+++ b/package.json
@@ -10,14 +10,21 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@popperjs/core": "^2.10.2",
         "@tailwindcss/ui": "^0.3",
         "autoprefixer": "^9.6",
         "axios": "^0.21",
+        "bootstrap": "^5.1.3",
         "laravel-mix": "^6.0.41",
         "lodash": "^4.17.19",
         "postcss-import": "^12.0",
         "postcss-nested": "^4.2",
+        "resolve-url-loader": "^3.1.2",
+        "sass": "^1.32.11",
+        "sass-loader": "^11.0.1",
         "tailwindcss": "^1.8",
-        "vue-template-compiler": "^2.6.11"
+        "vue": "^2.6.12",
+        "vue-loader": "^15.9.8",
+        "vue-template-compiler": "^2.6.12"
     }
 }
