--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "datacreativa/laravel-presentable": "^0.0.1",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.4",
+        "laravel/dusk": "^6.22",
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
