--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "autoprefixer": "^9.6",
         "axios": "^0.21",
         "bootstrap": "^5.1.3",
+        "jquery": "^3.6.0",
         "laravel-mix": "^6.0.41",
         "lodash": "^4.17.19",
         "postcss-import": "^12.0",
